test/org/midica/testfiles/failing/call-undefined-function.midica
INCLUDE inc/instruments.midica

CALL test